// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eval 1 1`] = `
Array [
  StackFrame {
    "_originalColumnNumber": null,
    "_originalFileName": null,
    "_originalFunctionName": null,
    "_originalLineNumber": null,
    "_originalScriptCode": null,
    "_scriptCode": null,
    "columnNumber": null,
    "fileName": "file:///C:/example.html",
    "functionName": "test1",
    "lineNumber": 7,
  },
  StackFrame {
    "_originalColumnNumber": null,
    "_originalFileName": null,
    "_originalFunctionName": null,
    "_originalLineNumber": null,
    "_originalScriptCode": null,
    "_scriptCode": null,
    "columnNumber": null,
    "fileName": "file:///C:/example.html",
    "functionName": "test2",
    "lineNumber": 7,
  },
  StackFrame {
    "_originalColumnNumber": null,
    "_originalFileName": null,
    "_originalFunctionName": null,
    "_originalLineNumber": null,
    "_originalScriptCode": null,
    "_scriptCode": null,
    "columnNumber": 6,
    "fileName": "file:///C:/example.html",
    "functionName": "test3",
    "lineNumber": 7,
  },
]
`;

exports[`eval 2 1`] = `
Array [
  StackFrame {
    "_originalColumnNumber": null,
    "_originalFileName": null,
    "_originalFunctionName": null,
    "_originalLineNumber": null,
    "_originalScriptCode": null,
    "_scriptCode": null,
    "columnNumber": null,
    "fileName": "file:///C:/example.html",
    "functionName": "anonymous",
    "lineNumber": 7,
  },
  StackFrame {
    "_originalColumnNumber": null,
    "_originalFileName": null,
    "_originalFunctionName": null,
    "_originalLineNumber": null,
    "_originalScriptCode": null,
    "_scriptCode": null,
    "columnNumber": 6,
    "fileName": "file:///C:/example.html",
    "functionName": null,
    "lineNumber": 7,
  },
]
`;

exports[`stack with eval 1`] = `
Array [
  StackFrame {
    "_originalColumnNumber": null,
    "_originalFileName": null,
    "_originalFunctionName": null,
    "_originalLineNumber": null,
    "_originalScriptCode": null,
    "_scriptCode": null,
    "columnNumber": 9,
    "fileName": "file:///Users/joe/Documents/Development/OSS/stack-frame/index.html",
    "functionName": "e",
    "lineNumber": 25,
  },
  StackFrame {
    "_originalColumnNumber": null,
    "_originalFileName": null,
    "_originalFunctionName": null,
    "_originalLineNumber": null,
    "_originalScriptCode": null,
    "_scriptCode": null,
    "columnNumber": null,
    "fileName": "file:///Users/joe/Documents/Development/OSS/stack-frame/index.html",
    "functionName": "eval",
    "lineNumber": 17,
  },
  StackFrame {
    "_originalColumnNumber": null,
    "_originalFileName": null,
    "_originalFunctionName": null,
    "_originalLineNumber": null,
    "_originalScriptCode": null,
    "_scriptCode": null,
    "columnNumber": 9,
    "fileName": "file:///Users/joe/Documents/Development/OSS/stack-frame/index.html",
    "functionName": "a",
    "lineNumber": 8,
  },
  StackFrame {
    "_originalColumnNumber": null,
    "_originalFileName": null,
    "_originalFunctionName": null,
    "_originalLineNumber": null,
    "_originalScriptCode": null,
    "_scriptCode": null,
    "columnNumber": 7,
    "fileName": "file:///Users/joe/Documents/Development/OSS/stack-frame/index.html",
    "functionName": null,
    "lineNumber": 32,
  },
]
`;

exports[`v14 to v29 1`] = `
Array [
  StackFrame {
    "_originalColumnNumber": null,
    "_originalFileName": null,
    "_originalFunctionName": null,
    "_originalLineNumber": null,
    "_originalScriptCode": null,
    "_scriptCode": null,
    "columnNumber": null,
    "fileName": "file:///C:/example.html",
    "functionName": "trace",
    "lineNumber": 9,
  },
  StackFrame {
    "_originalColumnNumber": null,
    "_originalFileName": null,
    "_originalFunctionName": null,
    "_originalLineNumber": null,
    "_originalScriptCode": null,
    "_scriptCode": null,
    "columnNumber": null,
    "fileName": "file:///C:/example.html",
    "functionName": "b",
    "lineNumber": 16,
  },
  StackFrame {
    "_originalColumnNumber": null,
    "_originalFileName": null,
    "_originalFunctionName": null,
    "_originalLineNumber": null,
    "_originalScriptCode": null,
    "_scriptCode": null,
    "columnNumber": null,
    "fileName": "file:///C:/example.html",
    "functionName": "a",
    "lineNumber": 19,
  },
  StackFrame {
    "_originalColumnNumber": null,
    "_originalFileName": null,
    "_originalFunctionName": null,
    "_originalLineNumber": null,
    "_originalScriptCode": null,
    "_scriptCode": null,
    "columnNumber": null,
    "fileName": "file:///C:/example.html",
    "functionName": null,
    "lineNumber": 21,
  },
]
`;

exports[`v30+ 1`] = `
Array [
  StackFrame {
    "_originalColumnNumber": null,
    "_originalFileName": null,
    "_originalFunctionName": null,
    "_originalLineNumber": null,
    "_originalScriptCode": null,
    "_scriptCode": null,
    "columnNumber": 17,
    "fileName": "file:///C:/example.html",
    "functionName": "trace",
    "lineNumber": 9,
  },
  StackFrame {
    "_originalColumnNumber": null,
    "_originalFileName": null,
    "_originalFunctionName": null,
    "_originalLineNumber": null,
    "_originalScriptCode": null,
    "_scriptCode": null,
    "columnNumber": 13,
    "fileName": "file:///C:/example.html",
    "functionName": "b",
    "lineNumber": 16,
  },
  StackFrame {
    "_originalColumnNumber": null,
    "_originalFileName": null,
    "_originalFunctionName": null,
    "_originalLineNumber": null,
    "_originalScriptCode": null,
    "_scriptCode": null,
    "columnNumber": 13,
    "fileName": "file:///C:/example.html",
    "functionName": "a",
    "lineNumber": 19,
  },
  StackFrame {
    "_originalColumnNumber": null,
    "_originalFileName": null,
    "_originalFunctionName": null,
    "_originalLineNumber": null,
    "_originalScriptCode": null,
    "_scriptCode": null,
    "columnNumber": 9,
    "fileName": "file:///C:/example.html",
    "functionName": null,
    "lineNumber": 21,
  },
]
`;
